fix(ui5-badge): align multiple badges when used in one line (#6481)
Fixes #6467

--- a/packages/main/src/themes/Badge.css
+++ b/packages/main/src/themes/Badge.css
@@ -2,6 +2,7 @@
 
 :host(:not([hidden])) {
 	display: inline-block;
+	vertical-align: top;
 	height: 1rem;
 	min-width: 1.125em;
 	max-width: 100%;
